# coffe_analyzer

./: README.md  pyproject.toml  requirements-dev.txt
src/coffeanalyzer/: __init__.py  coffeanalyzer.py
tests/: test_arp4761_q411.py  test_example.py
tests/test_files/: example.csv  table_Q-4-6.csv
