[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffe-analyzer"
dynamic = ['version']
dependencies = [
    "mpmath==1.3.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "six==1.16.0",
    "sympy==1.12",
    "tzdata==2024.1"
]
requires-python = ">= 3.10"
authors = [
  {name = "Samuel Garcia Lorente", email = "sglorente@proton.me"}
]
description = "Supports the CoFFE analysis presented in ARP4761A/ED-135."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["safety", "RAMS", "ARP4761A", "ED135", "CoFFE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/samuelglorente/coffe_analyzer.git"
Issues = "https://github.com/samuelglorente/coffe_analyzer/issues"

[tool.hatch.version]
path = "src/coffeanalyzer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/coffeanalyzer"]
